--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,16 +9,13 @@ License: MIT License
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    dplyr,
     learnr,
     rmarkdown,
-    tidyr,
     magrittr,
     palmerpenguins,
     checkmate,
-    readr,
-    haven,
     knitr,
     ggdag,
     stargazer,
-    tidyverse
+    tidyverse,
+    wooldridge
